@@ -7,6 +7,7 @@
   - Add `add_scale_suffix` for add suffix for instance name by default.
   - Filter network by datacenters before attach.
   - Start vm on create only with `enable_start_vm` equal to True.
+  - Cleanup runtime properties after delete ippool, cdrom and server instances.
 2.15.1:
   - Fix mistake with network adapters type. #138
 2.15.0:
